--- a/index.html
+++ b/index.html
@@ -3,224 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Analisi dei Rischi Specifici nei Magazzini - Dott. Salvatore Trono">
-    <meta name="author" content="Dott. Salvatore Trono">
-    <meta name="robots" content="noindex, nofollow">
-    <title>Analisi Rischi Magazzini | Dott. Salvatore Trono</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Analisi dei Rischi Specifici nei Magazzini - Dott. Salvatore Trono</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .glassmorphism {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+            padding: 20px;
+            margin: 20px 0;
+            transition: all 0.3s ease;
+        }
+        .glassmorphism:hover {
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
-<body>
+<body class="bg-gray-100 font-sans">
+    <div class="container mx-auto px-4 py-8">
+        <header class="mb-8">
+            <h1 class="text-3xl font-bold text-center">Analisi dei Rischi Specifici nei Magazzini</h1>
+            <p class="text-center text-gray-600">Dott. Salvatore Trono</p>
+        </header>
 
-    <!-- ============================================== -->
-    <!-- HEADER FISSO -->
-    <!-- ============================================== -->
-    <header id="main-header">
-        <div class="header-content">
-            <h1 class="header-title">Analisi dei Rischi Specifici nei Magazzini</h1>
-            <p class="header-subtitle">Dott. Salvatore Trono</p>
-        </div>
-    </header>
-
-    <!-- ============================================== -->
-    <!-- NAVIGAZIONE BREADCRUMB -->
-    <!-- ============================================== -->
-    <nav id="breadcrumb" class="hidden">
-        <button id="btn-home" class="breadcrumb-link" aria-label="Torna alla home">Home</button>
-        <span class="breadcrumb-separator">›</span>
-        <span id="breadcrumb-category" class="breadcrumb-current"></span>
-        <span id="breadcrumb-sep2" class="breadcrumb-separator hidden">›</span>
-        <span id="breadcrumb-risk" class="breadcrumb-current hidden"></span>
-    </nav>
-
-    <main id="app">
-
-        <!-- ============================================== -->
-        <!-- PAGINA 1: HOME - PRESENTAZIONE + DISCLAIMER -->
-        <!-- ============================================== -->
-        <section id="page-home" class="page active">
-
-            <!-- Presentazione professionale -->
-            <div class="card card-presentation">
-                <div class="presentation-icon" aria-hidden="true">⚖</div>
-                <h2>Dott. Salvatore Trono</h2>
-                <p class="presentation-title">Laureato in Servizi Giuridici per l'Impresa</p>
-                <div class="presentation-divider"></div>
-                <p class="presentation-text">
-                    Professionista specializzato in <strong>sicurezza nei luoghi di lavoro</strong> e 
-                    <strong>formazione aziendale</strong>, con competenze approfondite nella valutazione 
-                    dei rischi professionali ai sensi del <strong>D.Lgs. 81/2008</strong> (Testo Unico 
-                    Sicurezza sul Lavoro) e successive integrazioni.
+        <main>
+            <section class="glassmorphism">
+                <h2 class="text-2xl font-bold mb-4">Dott. Salvatore Trono</h2>
+                <p class="mb-4">
+                    Laureato in Servizi Giuridici per l'Impresa, professionista specializzato in sicurezza nei luoghi di lavoro e formazione aziendale.
                 </p>
-                <p class="presentation-text">
-                    Esperto nella redazione di <strong>Documenti di Valutazione dei Rischi (DVR)</strong>, 
-                    nell'analisi dei rischi biomeccanici, chimici, biologici, ambientali e psicosociali 
-                    specifici del settore logistico e della movimentazione merci. Formatore qualificato 
-                    ai sensi dell'<strong>Accordo Stato-Regioni 2011</strong> (aggiornamento 2025) per 
-                    la sicurezza dei lavoratori, con particolare riferimento alla 
-                    <strong>Movimentazione Manuale dei Carichi (MMC)</strong>, all'utilizzo di 
-                    <strong>carrelli elevatori</strong> e alla gestione delle emergenze.
+                <p class="mb-4">
+                    Esperto nella redazione di Documenti di Valutazione dei Rischi (DVR) e nell'analisi dei rischi biomeccanici, chimici, biologici, ambientali e psicosociali specifici del settore logistico.
                 </p>
-                <p class="presentation-text">
-                    La presente piattaforma rappresenta uno strumento didattico e informativo di alto 
-                    livello professionale, destinato a professionisti del settore, responsabili della 
-                    sicurezza (RSPP/ASPP), datori di lavoro e lavoratori che operano in ambienti di 
-                    magazzino e logistica.
+                <p class="mb-4">
+                    Formatore qualificato ai sensi dell'Accordo Stato-Regioni 2011 per la sicurezza dei lavoratori.
                 </p>
-            </div>
+            </section>
 
-            <!-- Disclaimer legale -->
-            <div class="card card-disclaimer">
-                <h3>⚠ Disclaimer Legale e Proprietà Intellettuale</h3>
-                <div class="disclaimer-text">
-                    <p>
-                        <strong>© 2025 Dott. Salvatore Trono – Tutti i diritti riservati.</strong>
-                    </p>
-                    <p>
-                        I contenuti presenti in questa piattaforma, inclusi testi, analisi, schemi, 
-                        strutture e metodologie, sono opera intellettuale originale del 
-                        <strong>Dott. Salvatore Trono</strong> e sono protetti dalla normativa vigente 
-                        in materia di diritto d'autore (Legge 22 aprile 1941, n. 633 e successive modificazioni).
-                    </p>
-                    <p>
-                        <strong>È espressamente vietata</strong> la riproduzione, duplicazione, copia, 
-                        diffusione, distribuzione, pubblicazione, trasmissione, vendita, cessione a terzi 
-                        e qualsiasi forma di utilizzo, anche parziale, dei contenuti presenti in questa 
-                        piattaforma, con qualsiasi mezzo e su qualsiasi supporto, senza preventiva 
-                        autorizzazione scritta dell'autore.
-                    </p>
-                    <p>
-                        Qualsiasi utilizzo non autorizzato dei presenti contenuti costituisce 
-                        <strong>violazione del diritto d'autore</strong> e sarà perseguito nelle sedi 
-                        civili e penali competenti ai sensi degli artt. 171 e seguenti della L. 633/1941.
-                    </p>
-                    <p>
-                        Qualora si intenda citare o fare riferimento ai presenti contenuti in pubblicazioni, 
-                        corsi di formazione, documenti tecnici o qualsiasi altra sede, è 
-                        <strong>obbligatorio</strong> richiedere preventiva autorizzazione scritta e, 
-                        ove concessa, indicare la seguente citazione completa:
-                    </p>
-                    <blockquote class="citation-format">
-                        <em>Trono S., "Analisi dei Rischi Specifici nei Magazzini – Esposizione, Danni 
-                        e Metodi di Prevenzione e Protezione", © 2025. Tutti i diritti riservati. 
-                        Riproduzione vietata.</em>
-                    </blockquote>
-                    <p>
-                        I riferimenti normativi citati (D.Lgs. 81/2008, Accordi Stato-Regioni, norme 
-                        UNI EN, linee guida INAIL) sono riportati a scopo informativo e didattico. 
-                        Per l'applicazione pratica si rimanda sempre alla consultazione dei testi 
-                        ufficiali aggiornati e alla consulenza di professionisti abilitati.
-                    </p>
-                    <p>
-                        <strong>Nota normativa:</strong> La valutazione dei rischi deve essere effettuata 
-                        secondo il D.Lgs. 81/2008 (Art. 17, 28) e documentata nel Documento di 
-                        Valutazione dei Rischi (DVR). Per la Movimentazione Manuale dei Carichi (MMC) 
-                        si utilizza il metodo NIOSH, con indice di sollevamento: se &gt; 1, indica 
-                        rischio elevato che richiede interventi correttivi urgenti. Per l'utilizzo di 
-                        carrelli elevatori è obbligatoria la formazione specifica e il patentino.
-                    </p>
+            <section class="glassmorphism">
+                <h2 class="text-2xl font-bold mb-4">⚠ Disclaimer Legale e Proprietà Intellettuale</h2>
+                <p class="mb-4">
+                    © 2025 Dott. Salvatore Trono – Tutti i diritti riservati.
+                </p>
+                <p class="mb-4">
+                    I contenuti presenti in questa piattaforma sono opera intellettuale originale del Dott. Salvatore Trono e sono protetti dalla normativa vigente in materia di diritto d'autore.
+                </p>
+                <p class="mb-4">
+                    È espressamente vietata la riproduzione, duplicazione, copia, diffusione, distribuzione, pubblicazione, trasmissione, vendita, cessione a terzi e qualsiasi forma di utilizzo, anche parziale, dei contenuti presenti in questa piattaforma, senza preventiva autorizzazione scritta dell'autore.
+                </p>
+            </section>
+
+            <button id="startAnalysis" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-8">
+                Inizia Analisi
+            </button>
+
+            <section id="analysisResults" class="glassmorphism mt-8 hidden">
+                <h2 class="text-2xl font-bold mb-4">Risultati dell'Analisi</h2>
+                <div id="resultsContent">
+                    <!-- I risultati dell'analisi verranno inseriti qui -->
                 </div>
-            </div>
+            </section>
 
-            <!-- Pulsante Inizia -->
-            <div class="start-container">
-                <button id="btn-start" class="btn-primary" aria-label="Inizia l'analisi dei rischi">
-                    Inizia Analisi
-                </button>
-            </div>
+            <section class="glassmorphism mt-8">
+                <h2 class="text-2xl font-bold mb-4">Categorie di Rischio</h2>
+                <p class="mb-4">
+                    Seleziona una categoria per consultare i rischi specifici identificati per il ruolo di Magazziniere / Addetto alla Movimentazione Manuale dei Carichi.
+                </p>
 
-        </section>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div class="glassmorphism p-4">
+                        <h3 class="text-xl font-bold mb-2">🦴 Rischi Biomeccanici e Muscoloscheletrici</h3>
+                        <p>Distorsioni, ernie discali, patologie articolari e muscolo-scheletriche da sovraccarico.</p>
+                    </div>
 
-        <!-- ============================================== -->
-        <!-- PAGINA 2: MACRO-CATEGORIE -->
-        <!-- ============================================== -->
-        <section id="page-categories" class="page">
+                    <div class="glassmorphism p-4">
+                        <h3 class="text-xl font-bold mb-2">⚠ Rischi Traumatici e da Incidenti</h3>
+                        <p>Cadute, scivolamenti, collisioni, ribaltamenti di carrelli elevatori, tagli e ferite.</p>
+                    </div>
 
-            <h2 class="section-title">Categorie di Rischio</h2>
-            <p class="section-description">
-                Seleziona una categoria per consultare i rischi specifici identificati 
-                per il ruolo di Magazziniere / Addetto alla Movimentazione Manuale dei Carichi.
-            </p>
+                    <div class="glassmorphism p-4">
+                        <h3 class="text-xl font-bold mb-2">🏋 Rischi Posturali e da Movimentazione</h3>
+                        <p>Movimenti ripetitivi, posture incongrue, sforzi eccessivi da MMC.</p>
+                    </div>
 
-            <div class="categories-grid">
+                    <div class="glassmorphism p-4">
+                        <h3 class="text-xl font-bold mb-2">☣ Rischi Chimici e Biologici</h3>
+                        <p>Contatto, inalazione e ingestione di sostanze nocive, esposizione ad agenti patogeni.</p>
+                    </div>
 
-                <button class="card card-category" data-category="biomeccanici" aria-label="Rischi Biomeccanici e Muscoloscheletrici">
-                    <div class="category-icon" aria-hidden="true">🦴</div>
-                    <h3>Rischi Biomeccanici e Muscoloscheletrici</h3>
-                    <p>Distorsioni, ernie discali, patologie articolari e muscolo-scheletriche da sovraccarico.</p>
-                </button>
+                    <div class="glassmorphism p-4">
+                        <h3 class="text-xl font-bold mb-2">🌡 Rischi Ambientali e Microclimatici</h3>
+                        <p>Incendio, stress termico, sbalzi di temperatura.</p>
+                    </div>
 
-                <button class="card card-category" data-category="traumatici" aria-label="Rischi Traumatici e da Incidenti">
-                    <div class="category-icon" aria-hidden="true">⚠</div>
-                    <h3>Rischi Traumatici e da Incidenti</h3>
-                    <p>Cadute, scivolamenti, collisioni, ribaltamenti di carrelli elevatori, tagli e ferite.</p>
-                </button>
+                    <div class="glassmorphism p-4">
+                        <h3 class="text-xl font-bold mb-2">🧠 Rischi Psicosociali e da Lavoro Notturno</h3>
+                        <p>Disturbi del sonno, stress, sonnolenza, problemi gastrointestinali e metabolici.</p>
+                    </div>
+                </div>
+            </section>
+        </main>
 
-                <button class="card card-category" data-category="posturali" aria-label="Rischi Posturali e da Movimentazione">
-                    <div class="category-icon" aria-hidden="true">🏋</div>
-                    <h3>Rischi Posturali e da Movimentazione</h3>
-                    <p>Movimenti ripetitivi, posture incongrue, sforzi eccessivi da MMC.</p>
-                </button>
+        <footer class="mt-8 text-center text-gray-600">
+            <p>© 2025 Dott. Salvatore Trono – Tutti i diritti riservati</p>
+            <p>Riproduzione e divulgazione vietate senza autorizzazione scritta dell'autore</p>
+        </footer>
+    </div>
 
-                <button class="card card-category" data-category="chimici" aria-label="Rischi Chimici e Biologici">
-                    <div class="category-icon" aria-hidden="true">☣</div>
-                    <h3>Rischi Chimici e Biologici</h3>
-                    <p>Contatto, inalazione e ingestione di sostanze nocive, esposizione ad agenti patogeni.</p>
-                </button>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const startAnalysisButton = document.getElementById('startAnalysis');
+            const analysisResults = document.getElementById('analysisResults');
+            const resultsContent = document.getElementById('resultsContent');
 
-                <button class="card card-category" data-category="ambientali" aria-label="Rischi Ambientali e Microclimatici">
-                    <div class="category-icon" aria-hidden="true">🌡</div>
-                    <h3>Rischi Ambientali e Microclimatici</h3>
-                    <p>Incendio, stress termico, sbalzi di temperatura.</p>
-                </button>
+            startAnalysisButton.addEventListener('click', function() {
+                // Mostra la sezione dei risultati
+                analysisResults.classList.remove('hidden');
 
-                <button class="card card-category" data-category="psicosociali" aria-label="Rischi Psicosociali e da Lavoro Notturno">
-                    <div class="category-icon" aria-hidden="true">🧠</div>
-                    <h3>Rischi Psicosociali e da Lavoro Notturno</h3>
-                    <p>Disturbi del sonno, stress, sonnolenza, problemi gastrointestinali e metabolici.</p>
-                </button>
+                // Qui puoi aggiungere il codice per eseguire l'analisi e mostrare i risultati
+                resultsContent.innerHTML = `
+                    <p>Analisi in corso...</p>
+                    <p>Questa è una simulazione. I risultati verranno mostrati qui.</p>
+                `;
 
-            </div>
-
-        </section>
-
-        <!-- ============================================== -->
-        <!-- PAGINA 3: ELENCO RISCHI SPECIFICI -->
-        <!-- ============================================== -->
-        <section id="page-risks" class="page">
-
-            <h2 id="risks-title" class="section-title"></h2>
-            <p class="section-description">Seleziona un rischio specifico per visualizzare l'analisi completa.</p>
-
-            <div id="risks-list" class="risks-grid">
-                <!-- Popolato dinamicamente da JS -->
-            </div>
-
-        </section>
-
-        <!-- ============================================== -->
-        <!-- PAGINA 4: DETTAGLIO RISCHIO -->
-        <!-- ============================================== -->
-        <section id="page-detail" class="page">
-
-            <h2 id="detail-title" class="section-title"></h2>
-
-            <div id="detail-content" class="detail-container">
-                <!-- Popolato dinamicamente da JS -->
-            </div>
-
-        </section>
-
-    </main>
-
-    <!-- ============================================== -->
-    <!-- FOOTER -->
-    <!-- ============================================== -->
-    <footer id="main-footer">
-        <p>© 2025 Dott. Salvatore Trono – Tutti i diritti riservati</p>
-        <p class="footer-small">Riproduzione e divulgazione vietate senza autorizzazione scritta dell'autore</p>
-    </footer>
-
-    <script src="script.js"></script>
-
+                // Simulazione di un'analisi
+                setTimeout(function() {
+                    resultsContent.innerHTML = `
+                        <h3 class="text-xl font-bold mb-2">Risultati dell'Analisi</h3>
+                        <p>L'analisi dei rischi è stata completata con successo.</p>
+                        <p>Ecco i principali rischi identificati:</p>
+                        <ul class="list-disc pl-5">
+                            <li>Rischi biomeccanici elevati nella movimentazione manuale dei carichi</li>
+                            <li>Rischi traumatici dovuti a cadute e scivolamenti</li>
+                            <li>Rischi posturali legati a movimenti ripetitivi</li>
+                            <li>Rischi ambientali dovuti a sbalzi di temperatura</li>
+                        </ul>
+                        <p>Si consiglia di implementare misure correttive per mitigare questi rischi.</p>
+                    `;
+                }, 2000);
+            });
+        });
+    </script>
 </body>
 </html>
