--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         // ===== CONFIGURAZIONE =====
         const CONFIG = {
             totalQuestions: 15,
-            testDuration: 20 * 60, // 20 minuti in secondi
+            testDuration: 5, // 20 minuti in secondi
             passThreshold: 0.70,   // 70%
             warningTime: 5 * 60    // Ultimi 5 minuti
         };
