--- a/index.html
+++ b/index.html
@@ -296,9 +296,23 @@
 
             <div style="text-align: center; margin: 30px 0;">
                 <a href="https://trono-slv.github.io/Valutazione-dei-rischi-in-magazzino/" target="_blank" class="btn btn-secondary" style="margin: 10px;">
-                    📚 Vai alle Lezioni Teoriche
+                    📚 Prima di procedere al test puoi studiare i rischi a questo link
                 </a>
             </div>
+<!-- NUOVO LINK FORMAZIONE GENERALE -->
+<div class="bg-white/80 backdrop-blur-sm rounded-xl p-6 shadow-lg border-2 border-blue-200">
+    <p class="text-gray-700 mb-3 text-center">
+        ⚖️ Per ripassare gli aspetti giuridico-normativi della sicurezza sul lavoro:
+    </p>
+    <a href="https://trono-slv.github.io/test-SSL---BASE/" 
+       target="_blank" 
+       class="text-lg font-semibold text-blue-600 hover:text-blue-700 hover:translate-x-2 transition-all duration-300 flex items-center justify-center gap-2">
+        ➡️ Formazione Generale
+    </a>
+    <p class="text-sm text-gray-600 mt-3 text-center italic">
+        📖 domande su obblighi normativi, diritti, procedure di sicurezza
+    </p>
+</div>
 
             <div class="disclaimer-box">
                 <h3 style="font-size: 16px; font-weight: 700; color: #991b1b; margin-bottom: 12px;">
