--- a/index.html
+++ b/index.html
@@ -302,12 +302,12 @@
 <!-- NUOVO LINK FORMAZIONE GENERALE -->
 <div class="bg-white/80 backdrop-blur-sm rounded-xl p-6 shadow-lg border-2 border-blue-200">
     <p class="text-gray-700 mb-3 text-center">
-        ⚖️ Per ripassare gli aspetti giuridico-normativi della sicurezza sul lavoro:
+        ⚖️ Per il test sugli aspetti giuridico-normativi della sicurezza sul lavoro:
     </p>
     <a href="https://trono-slv.github.io/test-SSL---BASE/" 
        target="_blank" 
        class="text-lg font-semibold text-blue-600 hover:text-blue-700 hover:translate-x-2 transition-all duration-300 flex items-center justify-center gap-2">
-        ➡️ Formazione Generale
+        ➡️ Test Formazione Generale
     </a>
     <p class="text-sm text-gray-600 mt-3 text-center italic">
         📖 domande su obblighi normativi, diritti, procedure di sicurezza
